2009-01-13:  Added context printing options to matrices.  This feature
             allows human-readable printing of huge matrices by only
             emitting specified horizontal and vertical contexts.

2008-11-12:  Improved Windows portability.

2008-11-10:  Fixed dynamic linking problem on Mac OS X.

2008-11-02:  Added new BLAS functions:

               * tpmv
               * tpsv

2008-11-01:  Added new BLAS function:

               * syr2k

2008-10-30:  Added new BLAS function:

               * trsv

2008-10-26:  Added two new matrix functions:

               * packed
               * unpacked

2008-10-15:  Added new LAPACK function:

               * geqrf

2008-09-21:  Added new BLAS and LAPACK functions:

               * trmm
               * trtrs
               * trtri

             Some minor API cleanups and internal improvements.

2008-09-17:  Added optional jitter argument to potrf, potrs, and potri.

2008-09-08:  !!! WARNING WARNING WARNING WARNING WARNING WARNING WARNING !!!

             potri and potrs now implicitly call potrf by default!
             This will break previous code depending on these functions,
             but should be trivial to fix.  This change was deemed
             necessary, because otherwise switching between sytri/potri
             and sytrs/potrs would cause surprises: the purely symmetric
             functions do already implicitly call the factorization
             unless a default parameter (ipiv) is overridden.

             Sorry for the inconvenience.

2008-07-21:  Generalized Mat.transpose to support specifying sub-matrices.

2008-04-23:  Fixed a parameter checking bug for syevr-related functions.

2008-04-11:  Added new BLAS function:

               * trmv

             Thanks to Martin Willensdorfer <ma.wi@gmx.at> for the patch!

2008-02-13:  Fixed a bug when implicitly allocating result matrices
             with user-specified offsets.  It may cause segfaults and