@@ -262,8 +262,10 @@ let pp_mat_gen
           if pp_head <> None then (
             fmt_row_label
               ~ellipsis:head_foot_ellipsis ~src_r:0 heads head_label;
-            do_pp_right ppf 0);
-          for r = 0 to ver_stop do
+              do_pp_right ppf 0;
+            pp_end_row ppf 0);
+          fmt_row_labels ~src_r:1 many_strs row_labels 0;
+          for r = 1 to ver_stop do
             pp_end_row ppf r;
             let src_r = r + 1 in
             fmt_row_labels ~src_r many_strs row_labels r;
@@ -352,7 +354,7 @@ let pp_complex_el_default = ref pp_complex_el_default_fun
 let pp_float_el ppf el = !pp_float_el_default ppf el
 let pp_complex_el ppf el = !pp_complex_el_default ppf el
 
-let pp_print_int32 ppf n = fprintf ppf "%ld" n
+let pp_int32_el ppf n = fprintf ppf "%ld" n
 
 
 (* Pretty-printing in standard style *)
@@ -366,7 +368,7 @@ type ('el, 'elt) pp_vec =
 
 let pp_fvec ppf vec = pp_mat_gen pp_float_el ppf (from_col_vec vec)
 let pp_cvec ppf vec = pp_mat_gen pp_complex_el ppf (from_col_vec vec)
-let pp_ivec ppf vec = pp_mat_gen pp_print_int32 ppf (from_col_vec vec)
+let pp_ivec ppf vec = pp_mat_gen pp_int32_el ppf (from_col_vec vec)
 
 let pp_rfvec ppf vec =
   let mat = from_row_vec vec in
@@ -378,7 +380,7 @@ let pp_rcvec ppf vec =
 
 let pp_rivec ppf vec =
   let mat = from_row_vec vec in
-  pp_mat_gen ~pp_end_row:pp_end_row_space ~pad:None pp_print_int32 ppf mat
+  pp_mat_gen ~pp_end_row:pp_end_row_space ~pad:None pp_int32_el ppf mat
 
 (* Matrices *)
 
@@ -389,7 +391,7 @@ type ('el, 'elt) pp_mat =
 
 let pp_fmat ppf mat = pp_mat_gen pp_float_el ppf mat
 let pp_cmat ppf mat = pp_mat_gen pp_complex_el ppf mat
-let pp_imat ppf mat = pp_mat_gen pp_print_int32 ppf mat
+let pp_imat ppf mat = pp_mat_gen pp_int32_el ppf mat
 
 
 (* Labeled pretty-printing *)
@@ -435,7 +437,7 @@ let pp_labeled_mat_gen
 
 let pp_labeled_fmat ?pp_head = pp_labeled_mat_gen pp_float_el ?pp_head
 let pp_labeled_cmat ?pp_head = pp_labeled_mat_gen pp_complex_el ?pp_head
-let pp_labeled_imat ?pp_head = pp_labeled_mat_gen pp_print_int32 ?pp_head
+let pp_labeled_imat ?pp_head = pp_labeled_mat_gen pp_int32_el ?pp_head
 
 (* String-labeled matrices *)
 
@@ -539,7 +541,7 @@ let pp_labeled_vec_gen
 
 let pp_labeled_fvec ?pp_head = pp_labeled_vec_gen pp_float_el ?pp_head
 let pp_labeled_cvec ?pp_head = pp_labeled_vec_gen pp_complex_el ?pp_head
-let pp_labeled_ivec ?pp_head = pp_labeled_vec_gen pp_print_int32 ?pp_head
+let pp_labeled_ivec ?pp_head = pp_labeled_vec_gen pp_int32_el ?pp_head
 
 let some_pp_print_int = Some pp_print_int
 
@@ -567,7 +569,7 @@ let pp_labeled_rvec_gen
 
 let pp_labeled_rfvec ?pp_head = pp_labeled_rvec_gen pp_float_el ?pp_head
 let pp_labeled_rcvec ?pp_head = pp_labeled_rvec_gen pp_complex_el ?pp_head
-let pp_labeled_rivec ?pp_head = pp_labeled_rvec_gen pp_print_int32 ?pp_head
+let pp_labeled_rivec ?pp_head = pp_labeled_rvec_gen pp_int32_el ?pp_head
 
 (* String-labeled vectors *)
 
@@ -698,11 +700,11 @@ let pp_rovec ppf pp_el vec =
 
 let pp_ofvec ppf vec = pp_ovec ppf pp_float_el vec
 let pp_ocvec ppf vec = pp_ovec ppf pp_complex_el vec
-let pp_oivec ppf vec = pp_ovec ppf pp_print_int32 vec
+let pp_oivec ppf vec = pp_ovec ppf pp_int32_el vec
 
 let pp_rofvec ppf vec = pp_rovec ppf pp_float_el vec
 let pp_rocvec ppf vec = pp_rovec ppf pp_complex_el vec
-let pp_roivec ppf vec = pp_rovec ppf pp_print_int32 vec
+let pp_roivec ppf vec = pp_rovec ppf pp_int32_el vec
 
 (* Matrices *)
 
@@ -744,4 +746,35 @@ let pp_omat ppf pp_el mat =
 
 let pp_ofmat ppf mat = pp_omat ppf pp_float_el mat
 let pp_ocmat ppf mat = pp_omat ppf pp_complex_el mat
-let pp_oimat ppf mat = pp_omat ppf pp_print_int32 mat
+let pp_oimat ppf mat = pp_omat ppf pp_int32_el mat
+
+
+(* Good pretty-printers for toplevels *)
+
+(* Vectors *)
+
+let pp_labeled_col ppf c = if c > 0 then fprintf ppf "C%d" c
+let pp_labeled_row ppf r = if r > 0 then fprintf ppf "R%d" r
+
+let gen_pp_top_vec pp_el ppf vec =
+  pp_mat_gen ~pp_left:pp_labeled_row pp_el ppf (from_col_vec vec)
+
+let pp_top_fvec ppf vec = gen_pp_top_vec pp_float_el ppf vec
+let pp_top_cvec ppf vec = gen_pp_top_vec pp_complex_el ppf vec
+let pp_top_ivec ppf vec = gen_pp_top_vec pp_int32_el ppf vec
+
+let gen_pp_top_rvec pp_el ppf vec =
+  pp_mat_gen ~pp_head:pp_labeled_row pp_el ppf (from_row_vec vec)
+
+let pp_top_rfvec ppf vec = gen_pp_top_rvec pp_float_el ppf vec
+let pp_top_rcvec ppf vec = gen_pp_top_rvec pp_complex_el ppf vec
+let pp_top_rivec ppf vec = gen_pp_top_rvec pp_int32_el ppf vec
+
+(* Matrices *)
+
+let gen_pp_top_mat pp_el ppf mat =
+  pp_mat_gen ~pp_head:pp_labeled_col ~pp_left:pp_labeled_row pp_el ppf mat
+
+let pp_top_fmat ppf mat = gen_pp_top_mat pp_float_el ppf mat
+let pp_top_cmat ppf mat = gen_pp_top_mat pp_complex_el ppf mat
+let pp_top_imat ppf mat = gen_pp_top_mat pp_int32_el ppf mat
